2001-04-22  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/transaction-report.scm: use new api for
	changing sensitivity

	* src/guile/gnc.gwp: wrap new function

	* src/guile/global-options.c (gnc_set_option_selectable_by_name):
	new func

	* src/guile/option-util.c
	(gnc_option_db_set_option_selectable_by_name): new func

	* src/gnome/dialog-options.c (gnc_set_option_selectable): new func

	* src/gnome/dialog-account.c (gnc_type_list_unselect_cb): fix bug

	* src/scm/report/register.scm: use query option to store query

	* src/gnome/window-register.c (report_helper): don't copy
	the query -- it's converted to scm now

	* src/guile/gnc-helpers.c: more work on scm<->query

2001-04-22  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/transaction-report.scm: Added new options for
	specifying whether a subtotal will be printed. Unfinished.

	* src/scm/report.scm, src/scm/report/*.scm: Defined more string
	constants for option names. Used them in the reports.

2001-04-21  Christian Stimming  <stimming@tuhh.de>

	* src/scm/options.scm (gnc:make-multichoice-callback-option):
	Added multichoice option with callback functions, just like the
	complex-boolean-option.

	* src/scm/report/transaction-report.scm: Fixed date bug.

2001-04-21  Dave Peticolas  <dave@krondo.com>

	* src/guile/gnc-helpers.c: more work on scm<->query.

2001-04-20  Dave Peticolas  <dave@krondo.com>

	* src/gnome/window-report.c: raise app of new report to top

	* src/register/recncell.c: add confirmation callback

	* src/SplitLedger.c: implement reconcile confirm cb

	* src/gnome/gnc-html.c: add missing include

	* src/gnome/dialog-transfer.c: fix spelling

2001-04-20  Bill Gribble  <grib@billgribble.com>

	* src/gnome/dialog-column-view.c: maintain the report window
	edited list when closing dialog.  raise an existing edit dialog.

	* src/gnome/gnc-html.c: make sure we know about options editors 
	launched from gnc-options: urls
